# fastapi-l10n

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
dependency/: index.html
docs/: dependency.md  parser.md  types.md
fastapi_l10n/: dependency.py  l10n.py  parser.py
fastapi_localization/: __init__.py  dependency.py  l10n.py  parser.py  types.py
parser/: index.html
search/: search_index.json
types/: index.html
